Fix mobile side nav z-index (#368)

--- a/static/sass/_pattern_p-navigation.scss
+++ b/static/sass/_pattern_p-navigation.scss
@@ -27,5 +27,6 @@
   .p-side-navigation {
     position: sticky;
     top: 3rem;
+    z-index: 101;
   }
 }
